[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/driver_hud.gd" type="Script" id=2]
[ext_resource path="res://assets/atlas.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 288, 224, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 384, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 416, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 448, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 416, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 3
atlas = ExtResource( 3 )
region = Rect2( 448, 224, 32, 32 )

[node name="DriverHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.062
anchor_top = 0.168
anchor_right = 0.909
anchor_bottom = 0.92
margin_left = -0.488003
margin_top = 0.199989
margin_right = 0.184021
columns = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
visible = false
margin_right = 287.0
margin_bottom = 222.0

[node name="start" type="TextureButton" parent="GridContainer"]
margin_right = 287.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 2 )
expand = true
stretch_mode = 5

[node name="up" type="TextureButton" parent="GridContainer"]
margin_left = 291.0
margin_right = 578.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 3 )
expand = true
stretch_mode = 5

[node name="button_respawn" type="Button" parent="GridContainer"]
margin_left = 582.0
margin_right = 868.0
margin_bottom = 222.0
text = "RESPAWN"

[node name="left" type="TextureButton" parent="GridContainer"]
margin_top = 226.0
margin_right = 287.0
margin_bottom = 447.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 4 )
expand = true
stretch_mode = 5

[node name="down" type="TextureButton" parent="GridContainer"]
margin_left = 291.0
margin_top = 226.0
margin_right = 578.0
margin_bottom = 447.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 5 )
expand = true
stretch_mode = 5
flip_v = true

[node name="right" type="TextureButton" parent="GridContainer"]
margin_left = 582.0
margin_top = 226.0
margin_right = 868.0
margin_bottom = 447.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 6 )
expand = true
stretch_mode = 5
flip_h = true

[node name="ClockDisplay" type="Label" parent="."]
anchor_left = 0.106
anchor_top = 0.085
anchor_right = 0.812
anchor_bottom = 0.14
margin_left = 0.455994
margin_right = 0.511963
size_flags_vertical = 1
text = "TIME"

[connection signal="pressed" from="GridContainer/start" to="." method="_on_start_pressed"]
[connection signal="button_down" from="GridContainer/up" to="." method="_on_ui_down" binds= [ "ui_up" ]]
[connection signal="button_up" from="GridContainer/up" to="." method="_on_ui_up" binds= [ "ui_up" ]]
[connection signal="pressed" from="GridContainer/button_respawn" to="." method="_on_button_respawn_pressed"]
[connection signal="button_down" from="GridContainer/left" to="." method="_on_ui_down" binds= [ "ui_left" ]]
[connection signal="button_up" from="GridContainer/left" to="." method="_on_ui_up" binds= [ "ui_left" ]]
[connection signal="button_down" from="GridContainer/down" to="." method="_on_ui_down" binds= [ "ui_down" ]]
[connection signal="button_up" from="GridContainer/down" to="." method="_on_ui_up" binds= [ "ui_down" ]]
[connection signal="button_down" from="GridContainer/right" to="." method="_on_ui_down" binds= [ "ui_right" ]]
[connection signal="button_up" from="GridContainer/right" to="." method="_on_ui_up" binds= [ "ui_right" ]]
